--- a/playbook/roles/ckan/tasks/ckan_config_ckan.yml
+++ b/playbook/roles/ckan/tasks/ckan_config_ckan.yml
@@ -35,7 +35,12 @@
   command: "{{ ckan_virtualenv }}/bin/ckan --config={{ ckan_config_dir}}/ckan.ini db init"
 
 - name: Initializing datastore database
-  shell: "{{ ckan_virtualenv }}/bin/ckan --config={{ ckan_config_dir}}/ckan.ini datastore set-permissions | sudo -u postgres psql --set ON_ERROR_STOP=1"
+  become: true
+  become_user: postgres
+  shell: |
+    {{ ckan_virtualenv }}/bin/ckan --config={{ ckan_config_dir}}/ckan.ini datastore set-permissions | psql --set ON_ERROR_STOP=1
+  environment:
+    PGPASSWORD: "{{ postgres_password }}"
 
 - name: Create webassets storage folder
   file:
