Add become and become_user to uwsgi.yml task

--- a/playbook/roles/webserver/tasks/uwsgi.yml
+++ b/playbook/roles/webserver/tasks/uwsgi.yml
@@ -3,6 +3,8 @@
     name: uwsgi
     virtualenv: "{{ ckan_virtualenv }}"
     virtualenv_command: pyvenv
+  become: true
+  become_user: "{{ ckan_user }}"
     
 - name: Copy wsgi.py to configuration folder
   copy:
