Update ckanext-spatial requirements to fixed version
The ckanext-spatial requirements are updated to a fixed version to avoid issues with Numpy 2.0.

--- a/playbook/roles/ckan/tasks/ckan_install_ckan_exts.yml
+++ b/playbook/roles/ckan/tasks/ckan_install_ckan_exts.yml
@@ -85,7 +85,8 @@
       become: true
       become_user: "{{ ckan_user }}"
       pip:
-        requirements: "{{ virtualenv }}/src/ckanext-spatial/requirements.txt"
+        # Use a fixed version of requirements to avoid issues with Numpy 2.0
+        requirements: https://raw.githubusercontent.com/mjanez/ckan-docker/ckan-2.9.11/ckan/req_fixes/ckanext-spatial/requirements.txt
         virtualenv: "{{ virtualenv }}"
       when: result is success
   become: true
